# tumblr-archiver

./: .dockerignore  .env.example  .gitignore  ARCHIVER_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  DOWNLOADER_IMPLEMENTATION.md  Dockerfile  ENGINEER_READY_TUMBLR_MEDIA_RETRIEVER_PROMPT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_REPORT.md  INTEGRATION_TESTS_COMPLETE.md  LICENSE  MANIFEST.in  MANIFEST_IMPLEMENTATION.md  MANIFEST_IMPLEMENTATION_SUMMARY.md  MANIFEST_USAGE.md  PHASE_10_IMPLEMENTATION_SUMMARY.md  PROMPT.md  QA_VALIDATION_REPORT.md  README.md  RECOVERY_IMPLEMENTATION_SUMMARY.md  TASK_6.1_IMPLEMENTATION_SUMMARY.md  TASK_6.2_IMPLEMENTATION_SUMMARY.md  TASK_7.1_IMPLEMENTATION_SUMMARY.md  TASK_7.2_IMPLEMENTATION_SUMMARY.md  TASK_8.1_COMPLETE.md  TASK_8.1_IMPLEMENTATION_SUMMARY.md  TASK_8.2_IMPLEMENTATION_SUMMARY.md  TASK_9.1_IMPLEMENTATION_SUMMARY.md  TASK_9.2_IMPLEMENTATION_SUMMARY.md  TERMS_OF_USE.md  TESTS_COMPLETED.md  TEST_SUMMARY.md  VALIDATION_SUMMARY.md  check_manifest.py  config.example.json  debug_regular.py  demo_performance.py  docker-compose.yml  (+12 more)
.github/workflows/: release.yml  test.yml
benchmarks/: benchmark.py
docs/: architecture.md  archiver.md  configuration.md  downloader.md  recovery.md  troubleshooting.md  usage.md
examples/: advanced_config.sh  app_usage.py  archiver_example.py  basic_usage.sh  cli_usage.sh  config_usage.py  download_example.py  embed_usage.py  orchestrator_usage.py  progress_demo.py  recovery_example.py  recovery_integration.py  usage_demo.py  wayback_usage.py
qa/: manual_test_plan.md  test_results.md
scripts/: build.sh  publish.sh
src/tumblr_archiver/: __init__.py  __main__.py  app.py  archive.py  archiver.py  cache.py  checksum.py  cli.py  commands.py  compliance.py  config.py  constants.py  deduplicator.py  downloader.py  embed_downloaders.py  embeds.py  exceptions.py  http_client.py  logger.py  manifest.py  media_extractor.py  models.py  orchestrator.py  parser.py  performance.py  progress.py  queue.py  rate_limiter.py  recovery.py  retry.py  schemas.py  scraper.py  security.py  snapshot_selector.py  storage.py  tumblr_api.py  url_utils.py  wayback_client.py  worker.py
src/tumblr_downloader/: __init__.py  __main__.py  api_client.py  cli.py  downloader.py  manifest.py  media_selector.py  rate_limiter.py  utils.py
tests/: __init__.py  conftest.py  test_app.py  test_archive.py  test_archiver.py  test_checksum.py  test_cli.py  test_config.py  test_deduplicator.py  test_downloader.py  test_embeds.py  test_http_client.py  test_manifest.py  test_media_extraction.py  test_models.py  test_orchestrator.py  test_parser.py  test_performance.py  test_progress.py  test_rate_limiter.py  test_recovery.py  test_retry.py  test_schemas.py  test_scraper.py  test_security.py  test_snapshot_selector.py  test_tumblr_api.py  test_url_utils.py  test_validation.py  test_wayback_client.py
tests/acceptance/: __init__.py  test_acceptance.py  test_real_blog.py
tests/fixtures/: manifest.json  tumblr_page.html  urls.json
tests/integration/: INTEGRATION_TEST_SUMMARY.md  README.md  __init__.py  conftest.py  test_archive_fallback.py  test_end_to_end.py  test_resume.py
tests/mocks/: __init__.py  tumblr_server.py
