[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tumblr-media-downloader"
version = "0.1.0"
description = "CLI tool to download all media from Tumblr blogs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["tumblr", "download", "media", "images", "videos", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Multimedia",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/tumblr-media-downloader"
Repository = "https://github.com/yourusername/tumblr-media-downloader"
Issues = "https://github.com/yourusername/tumblr-media-downloader/issues"

[project.scripts]
tumblr-media-downloader = "tumblr_downloader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tumblr_downloader = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
